crates/threadloom/tests/compile_fail/bad_attribute.rs
use threadloom::threadloom;

fn main() {
    threadloom! {
        div(id "my-div") {
            "Hello"
        }
    }
}
