crates/threadloom/tests/compile_fail/bad_attribute.stderr
error: Expected '=' after attribute 'id'
 --> tests/compile_fail/bad_attribute.rs:5:16
  |
5 |         div(id "my-div") {
  |                ^^^^^^^^
